Fleshed out About page

--- a/About_page/About.html
+++ b/About_page/About.html
@@ -39,6 +39,7 @@
 
     <main id="About">
         <div id="about-info">
+            <div id="div-text">
             <h2>About</h2>
             <h3>Kallen O'Connor</h3>
             <p>A native of Columbus, Georgia, Kallen O'Connor began her violin
@@ -51,13 +52,20 @@
                  Kallen has been a member of the first violin section of the Akron Symphony Orchestra 
                  since 2015. She is a member of the band Emily & Ivory and currently resides in
                   Southwest Ohio with her husband, Sean and their Siamese cat, Chloe.</p>
+
+                  </div>
             
 
         </div>
         <div id="testimonials">
-            <h2>Testimonials</h2>
+            <div id="testimonial-text">
+            <h2>Endorsements</h2>
             <p>
-                "Kallen is the one of the very best musicians I have ever worked with.  She is a true professional not only in her preparation level, her ability to collaborate and her engaging performance presence. She has a beautiful sound and an awesome technique. It has been my pleasure to work with her for many live performances and recording projects.  Her ability to improvise as well as meticulously read difficult materials, make her a valued member of any ensemble or project one needs a superior violinist who is also a fantastic musician." 
+                <i>"Kallen is the one of the very best musicians I have ever worked with. 
+                     She is a true professional not only in her preparation level, her ability to collaborate and her engaging performance presence. 
+                     She has a beautiful sound and an awesome technique. It has been my pleasure to work with her for many live performances and recording projects.
+                      Her ability to improvise as well as meticulously read difficult materials, make her a valued member of any ensemble or project one needs a superior 
+                      violinist who is also a fantastic musician." </i>
             </p>
             <p>
                 Marshall Griffith
@@ -66,13 +74,18 @@
                 Resident Artist at The Cleveland Clinic <br/>
                 Director of Music at The Temple-Tifereth Israel 
             </p>
+            <br>
             <p>
-                "I've worked with Kallen countless times, and it has always been pure joy. She not only plays beautifully and has a great attitude, but she intuitively gets what you're looking for - the stuff that can't be written down or easily described. She is a phenomenal musician (and a great singer too, if you need that!) and always strives to attain the highest quality possible in everything she does. Hire her - you will be thrilled that you did!"
+                <i>"I've worked with Kallen countless times, and it has always been pure joy. 
+                She not only plays beautifully and has a great attitude, but she intuitively gets what you're looking for - 
+                the stuff that can't be written down or easily described. She is a phenomenal musician (and a great singer too, if you need that!) 
+                and always strives to attain the highest quality possible in everything she does. Hire her - you will be thrilled that you did!"</i>
             </p>
             <p>
                 Wally Minko <br/>
                 Grammy-nominated Composer, Arranger, and Keyboard Player
             </p>
+            </div>
 
         </div>
 
