added Contact page and updated About page

--- a/Contact_page/ContactPage.html
+++ b/Contact_page/ContactPage.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>String Trax Homepage</title>
+    <title>Contact</title>
     <script src="../script.js" defer> </script>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-
 </head>
-
 <body>
     <header>
         <div id="head-nav">
@@ -40,27 +37,23 @@
         </div>
     </div>
     </header>
-    <main id="Homepage">
-        <section id="Welcome">
-            <div id="transbox">
-                <span data-anim><h2>String <br />Trax</h2></span>
-                <span data-anim><h3>Freelance Recording Services</h3></span>
-            </div>
-        </section>
-        <section id="Contact">
-            <div id="contact-text">
-                <span data-anim><h2>Contact</h2></span>
-                <p>Offering professional violin and vocal tracks for recordings and other projects.
-                    Other strings available upon request. Please&nbsp;contact&nbsp;for&nbsp;a&nbsp;quote.</p>
-                <a href="mailto:info@stringtrax.com">info@stringtrax.com</a>
-            </div>
-            <img id="contact-accent" src="../Microphone.jpg" alt="Recording Studio" />
-        </section>
+    <main>
+        <img src="../Microphone.jpg" alt="Recording Studio">
+      
     </main>
-    <footer>
-        stringtrax.com
-    </footer>
-   
-</body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
 </html>
