completed Contact Page and updated links

--- a/Home_Page/StringTrax_HomePage.html
+++ b/Home_Page/StringTrax_HomePage.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div id="head-nav">
-            <h1>Stringtrax.com</h1>
+            <h1><a href="/Home_Page/StringTrax_HomePage.html">Stringtrax.com</a></h1>
             <div class="mobile-nav">
             <input class="checkbox" type="checkbox" name="" id="" />
             <div class="hamburger-lines">
@@ -31,7 +31,7 @@
             <nav>
                 <ul>
                     <li><a href="/Home_Page/StringTrax_HomePage.html">Home</a></li>
-                    <li><a href="">Media</a></li>
+                    <li><a href="/Media_Page/MediaPage.html">Media</a></li>
                     <li><a href="/About_page/About.html">About</a></li>
                     <li><a href="/Contact_page/ContactPage.html">Contact</a></li>
                 </ul>
@@ -49,7 +49,7 @@
         </section>
         <section id="Contact">
             <div id="contact-text">
-                <span data-anim><h2>Contact</h2></span>
+                <a href="/Contact_page/ContactPage.html"><span data-anim><h2>Contact</h2></span></a>
                 <p>Offering professional violin and vocal tracks for recordings and other projects.
                     Other strings available upon request. Please&nbsp;contact&nbsp;for&nbsp;a&nbsp;quote.</p>
                 <a href="mailto:info@stringtrax.com">info@stringtrax.com</a>
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer>
-        stringtrax.com
+        <a href="/Home_Page/StringTrax_HomePage.html">stringtrax.com</a>
     </footer>
    
 </body>
