--- a/About_page/About.html
+++ b/About_page/About.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div id="head-nav">
-            <h1>Stringtrax.com</h1>
+            <h1><a href="/Home_Page/StringTrax_HomePage.html">Stringtrax.com</a></h1>
             <div class="mobile-nav">
             <input class="checkbox" type="checkbox" name="" id="" />
             <div class="hamburger-lines">
@@ -28,7 +28,7 @@
             <nav>
                 <ul>
                     <li><a href="/Home_Page/StringTrax_HomePage.html">Home</a></li>
-                    <li><a href="">Media</a></li>
+                    <li><a href="/Media_Page/MediaPage.html">Media</a></li>
                     <li><a href="/About_page/About.html">About</a></li>
                     <li><a href="/Contact_page/ContactPage.html">Contact</a></li>
                 </ul>
@@ -97,7 +97,7 @@
     </main>
 
     <footer>
-        stringtrax.com
+        <a href="/Home_Page/StringTrax_HomePage.html">stringtrax.com</a>
     </footer>
 </body>
 </html>
