added css page for media page

--- a/Media_Page/MediaPage.html
+++ b/Media_Page/MediaPage.html
@@ -1,1 +1,56 @@
-<audio controls="controls"><source src="./Schindler's List.mp3" type="audio/mpeg"></audio>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Media</title>
+    <script src="../script.js" defer> </script>
+    <link rel="stylesheet" href="media.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div id="head-nav">
+            <h1><a href="/Home_Page/StringTrax_HomePage.html">Stringtrax.com</a></h1>
+            <div class="mobile-nav">
+            <input class="checkbox" type="checkbox" name="" id="" />
+            <div class="hamburger-lines">
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="/Home_Page/StringTrax_HomePage.html">Home</a></li>
+                    <li><a href="/Media_Page/MediaPage.html">Media</a></li>
+                    <li><a href="/About_page/About.html">About</a></li>
+                    <li><a href="/Contact_page/ContactPage.html">Contact</a></li>
+                </ul>
+            </nav>
+            </div>
+        </div>
+    </div>
+    </header>
+    <main>
+        <h1>UNDER CONSTRUCTION</h1>
+        <audio controls="controls"><source src="./Schindler's List.mp3" type="audio/mpeg"></audio>
+        <audio controls="controls"><source src="./Trace My Troubles Clip.mp3" type="audio/mpeg"></audio>
+        <audio controls="controls"><source src="./Waste My Time clip.mp3" type="audio/mpeg"></audio>
+
+    </main>
+
+    <footer>
+        <a href="/Home_Page/StringTrax_HomePage.html">stringtrax.com</a>
+    </footer>
+
+    
+</body>
+</html>
+
+
