--- a/Media_Page/MediaPage.html
+++ b/Media_Page/MediaPage.html
@@ -39,15 +39,15 @@
     </div>
     </header>
     <main>
-        <div id="audio-player-container">
+        <div class="audio-player-container">
             <audio src="./Schindler's List.mp3" preload="metadata" loop></audio>
-            <button id="play-icon"></button>
-            <span id="current-time" class="time">0:00</span>
-            <input type="range" id="seek-slider" max="100" value="0">
-            <span id="duration" class="time">0:00</span>
-            <output id="volume-output">100</output>
-            <input type="range" id="volume-slider" max="100" value="100">
-            <button id="mute-icon"></button>
+            <button class="play-icon"></button>
+            <span class="current-time" class="time">0:00</span>
+            <input type="range" class="seek-slider" max="100" value="0">
+            <span class="duration" class="time">0:00</span>
+            <output class="volume-output">100</output>
+            <input type="range" class="volume-slider" max="100" value="100">
+            <button class="mute-icon"></button>
           </div>
         <!-- <audio controls="controls"><source src="./Schindler's List.mp3" type="audio/mpeg"></audio>
         <audio controls="controls"><source src="./Trace My Troubles Clip.mp3" type="audio/mpeg"></audio>
