completed mobile layout for media page and changed home page to index.html for deployment

--- a/Contact_page/ContactPage.html
+++ b/Contact_page/ContactPage.html
@@ -46,7 +46,7 @@
             <p>Offering professional violin and vocal tracks for recordings and other projects. 
                 Other strings available upon request. Please contact for a quote.</p>
                 <p><a href="mailto:info@stringtrax.com">info@stringtrax.com</a></p>
-            <form>
+            <form action="https://getform.io/f/d464489d-9162-41d8-8c55-e12414ccfc5a" method="POST">
                 <div id="name">
                     <label for="name">Name</label>
                     <input id="name" name="name" type="text" placeholder="Enter your name"/>
