media data, baseurl, fonts

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 title: "Contact"
 sheet: "/css/contact.css"
 ---
-<img src="/img/Microphone.jpg" alt="Recording Studio">
+<img src="{{site.baseurl}}/img/Microphone.jpg" alt="Recording Studio">
 <div id="Contact-form">
     <span class="data-anim"><h2>Contact</h2></span>
     <p>Offering professional violin and vocal tracks for recordings and other projects.
