--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 title: "Home Page"
 sheet: "/css/home.css"
-layout: "default"
 ---
 <main id="Homepage">
     <section id="Welcome">
@@ -12,11 +11,11 @@ layout: "default"
     </section>
     <section id="Contact">
         <div id="contact-text">
-            <a href="/Contact_page/ContactPage.html"><span data-anim><h2>Contact</h2></span></a>
+            <a href="{{site.baseurl}}/contact"><span data-anim><h2>Contact</h2></span></a>
             <p>Offering professional violin and vocal tracks for recordings and other projects.
                 Other strings available upon request. Please&nbsp;contact&nbsp;for&nbsp;a&nbsp;quote.</p>
             <a href="mailto:info@stringtrax.com">info@stringtrax.com</a>
         </div>
-        <img id="contact-accent" src="/img/Microphone.jpg" alt="Recording Studio" />
+        <img id="contact-accent" src="{{site.baseurl}}/img/Microphone.jpg" alt="Recording Studio" />
     </section>
 </main>
