--- a/media.html
+++ b/media.html
@@ -82,5 +82,5 @@ video:
 
 </main>
 
-<script src="{{site.baseurl}}/js/player.js" type="module"></script>
-<script src="{{site.baseurl}}/js/videoplayer.js"></script>
+<script src="{{site.baseurl}}/js/player-audio.js" type="module"></script>
+<script src="{{site.baseurl}}/js/player-video.js" type="module"></script>
