--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ sheet: "/css/contact.css"
 ---
 <img src="{{site.baseurl}}/img/Microphone.jpg" alt="Recording Studio">
 <div id="Contact-form">
-    <span class="data-anim"><h2>Contact</h2></span>
+    <span data-anim><h2>Contact</h2></span>
     <p>Offering professional violin and vocal tracks for recordings and other projects.
         Other strings available upon request. Please contact for a quote.</p>
     <p><a href="mailto:info@stringtrax.com">info@stringtrax.com</a></p>
