misc cleanup. warning: opinionated changes

--- a/about.html
+++ b/about.html
@@ -5,10 +5,11 @@ sheet: "/css/about.css"
 <main id="About">
     <div id="about-info">
         <span data-anim>
-            <div id="div-text">
+            <div class="inset">
                 <h2>About</h2>
                 <h3>Kallen O'Connor</h3>
-                <p>A native of Columbus, Georgia, Kallen O'Connor began her violin
+                <p>
+                    A native of Columbus, Georgia, Kallen O'Connor began her violin
                     studies at age eight. Growing up, she was involved in many of the arts
                     including music, dance, and theater. In May 2015,
                     Kallen graduated as Valedictorian with a Bachelor of Music degree
@@ -17,47 +18,50 @@ sheet: "/css/about.css"
                     of William Preucil and Stephen Rose earning her Master of Music degree in May of 2016.
                     Kallen has been a member of the first violin section of the Akron Symphony Orchestra
                     since 2015. She is a member of the band Emily & Ivory and currently resides in
-                    Southwest Ohio with her husband, Sean and their Siamese&nbsp;cat,&nbsp;Chloe.</p>
-
+                    Southwest Ohio with her husband, Sean and their Siamese&nbsp;cat,&nbsp;Chloe.
+                </p>
             </div>
         </span>
     </div>
     <div id="testimonials">
-        <div id="testimonial-text">
+        <div class="inset">
             <span data-anim>
                 <h2>Endorsements</h2>
             </span>
-            <p>
-                <i>"I've worked with Kallen countless times, and it has always been pure joy.
+            <blockquote>
+                <p>
+                    "I've worked with Kallen countless times, and it has always been pure joy.
                     She not only plays beautifully and has a great attitude, but she intuitively gets what you're
                     looking for -
                     the stuff that can't be written down or easily described. She is a phenomenal musician (and a great
                     singer too, if you need that!)
                     and always strives to attain the highest quality possible in everything she does. Hire her - you
-                    will be thrilled that you did!"</i>
-            </p>
-            <p>
-                Wally Minko <br />
-                Grammy-nominated Composer, Arranger, and Keyboard Player
-            </p>
-            <br>
-            <p>
-                <i>"Kallen is the one of the very best musicians I have ever worked with.
+                    will be thrilled that you&nbsp;did!"
+                </p>
+                <cite>
+                    <strong>Wally Minko</strong> <br />
+                    Grammy-nominated Composer, Arranger, and Keyboard Player
+                </cite>
+            </blockquote>
+            <blockquote>
+                <p>
+                    "Kallen is the one of the very best musicians I have ever worked with.
                     She is a true professional not only in her preparation level, her ability to collaborate and her
                     engaging performance presence.
                     She has a beautiful sound and an awesome technique. It has been my pleasure to work with her for
                     many live performances and recording projects.
                     Her ability to improvise as well as meticulously read difficult materials, make her a valued member
                     of any ensemble or project one needs a superior
-                    violinist who is also a fantastic musician." </i>
-            </p>
-            <p>
-                Marshall Griffith
-                Emeritus Faculty Member of The Cleveland Institute of Music <br />
-                Community Artist for Piano Cleveland <br />
-                Resident Artist at The Cleveland Clinic <br />
-                Director of Music at The Temple-Tifereth Israel
-            </p>
+                    violinist who is also a fantastic musician."
+                </p>
+                <cite>
+                    <strong>Marshall Griffith</strong><br/>
+                    Emeritus Faculty Member of The Cleveland Institute of Music <br />
+                    Community Artist for Piano Cleveland <br />
+                    Resident Artist at The Cleveland Clinic <br />
+                    Director of Music at The Temple-Tifereth Israel
+                </cite>
+            </blockquote>
         </div>
     </div>
 </main>
