--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,13 @@ sheet: "/css/contact.css"
 ---
 <img src="{{site.baseurl}}/img/Microphone.jpg" alt="Recording Studio">
 <div id="Contact-form">
-    <span data-anim><h2>Contact</h2></span>
-    <p>Offering professional violin and vocal tracks for recordings and other projects.
-        Other strings available upon request. Please contact for a quote.</p>
+    <span data-anim>
+        <h2>Contact</h2>
+    </span>
+    <p>
+        Offering professional violin and vocal tracks for recordings and other projects.
+        Other strings available upon request. Please contact for a quote.
+    </p>
     <p><a href="mailto:info@stringtrax.com">info@stringtrax.com</a></p>
     <form action="https://getform.io/f/d464489d-9162-41d8-8c55-e12414ccfc5a" method="POST">
         <div id="name">
