opinionated homepage buttons

--- a/index.html
+++ b/index.html
@@ -6,15 +6,34 @@ sheet: "/css/home.css"
     <section id="Welcome">
         <div id="transbox">
             <span data-anim><h2>String <br />Trax</h2></span>
-            <span data-anim><h3>Freelance Recording Services</h3></span>
+            <span data-anim><h3>Recording Services</h3></span>
+            <span data-anim><a class="button-ish" href="{{site.baseurl}}/media">Listen</a></span>
+            <!--
+            <p>
+                Whether it's a solo violin track for a pop ballad or intricate string arrangements for a classical composition,
+                clients can expect exceptional musicianship and technical proficiency.
+                Stringtrax is an excellent choice for those seeking to elevate their music to the next level.
+            </p>
+            -->
         </div>
     </section>
     <section id="Contact">
         <div id="contact-text">
-            <a href="{{site.baseurl}}/contact"><span data-anim><h2>Contact</h2></span></a>
-            <p>Offering professional violin and vocal tracks for recordings and other projects.
-                Other strings available upon request. Please&nbsp;contact&nbsp;for&nbsp;a&nbsp;quote.</p>
-            <a href="mailto:info@stringtrax.com">info@stringtrax.com</a>
+            <span data-anim><h2>Contact</h2></span>
+            <span data-anim>
+                <p>
+                    Offering professional violin and vocal tracks for recordings and other projects.
+                    Other strings available upon request. Please&nbsp;contact&nbsp;for&nbsp;a&nbsp;quote.
+                </p>
+            </span>
+            <span data-anim>
+                <a class="button-ish" href="{{site.baseurl}}/contact">Get Started</a>
+            </span>
+            <span data-anim>
+                <p>
+                    <a href="mailto:info@stringtrax.com">info@stringtrax.com</a>
+                </p>
+            </span>
         </div>
         <img id="contact-accent" src="{{site.baseurl}}/img/Microphone.jpg" alt="Recording Studio" />
     </section>
