updated image link for spotify and font sizing

--- a/media.html
+++ b/media.html
@@ -49,7 +49,7 @@ video:
                 <input type="range" class="seek-slider" max="100" value="0">
                 <span class="duration time">0:00</span>
                 <div id="links">
-                    <a href="https://open.spotify.com/track/{{song.spotify}}"  target="_blank"><img id="spotify" src="{{site.baseurl}}/img/spotifyLogo.png"   ></a>
+                    <a href="https://open.spotify.com/track/{{song.spotify}}"  target="_blank"><img id="spotify" src="{{site.baseurl}}/img/spotifylogo.png"   ></a>
                     <a href="https://www.youtube.com/watch?v={{song.youtube}}" target="_blank"><img id="youtube" src="{{site.baseurl}}/img/YouTubeLogo.png"   ></a>
                     <a href="https://music.apple.com/us/album/{{song.apple}}"  target="_blank"><img id="apple"   src="{{site.baseurl}}/img/AppleMusicLogo.png"></a>
                 </div>
