--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@ sheet: "/css/contact.css"
         </div>
         <div id="email">
             <label for="email">Email</label>
-            <input id="email" name="email" type="text" placeholder="Enter your email" />
+            <input id="email" name="email" type="email" placeholder="Enter your email" />
         </div>
         <div id="subject">
             <label for="subject">Subject</label>
